--- a/RentAMovie/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RentAMovie/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,7 +9,7 @@
 <div class="row form-container">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2>Create your account</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
@@ -34,6 +34,10 @@
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
+        <div class="secondary-redirect">
+            <p>Already have an account?</p>
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login now</a>
+        </div>
     </div>
 </div>
 
