--- a/RentAMovie/Views/Home/Index.cshtml
+++ b/RentAMovie/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Home";
     string posterPath = "https://image.tmdb.org/t/p/w1920_and_h800_multi_faces";
+    string posterPathCard = "https://image.tmdb.org/t/p/w500";
+    string ratingColor;
     bool firstSlide = true;
 }
 @if (TempData["error"] != null)
@@ -21,18 +23,71 @@
 }
 
 <div class="hero">
-    <h3>Get into the world of <spam class="animation">movies</spam></h3>
+    <h3>Get into the world of <span class="animation">movies</span></h3>
     <a asp-controller="Movie" asp-action="Popular" asp-route-CurrentPage="1">See what's popular</a>
+    <img src="~/images/posters.jpg" />
+    <span class="background-color"></span>
+</div>
+<div class="featured-section">
+    <h2>Explore What’s Streaming</h2>
+    <div class="featured-cards">
+        @foreach (var movie in Model.NowPlayingMovies)
+        {
+            string rating = "0.0";
+            if (movie.Rating != null)
+            {
+                rating = movie.Rating;
+            }
+
+            if (float.Parse(rating) >= 8)
+            {
+                ratingColor = "green";
+            }
+            else if (float.Parse(rating) >= 5)
+            {
+                ratingColor = "orange";
+            }
+            else if (float.Parse(rating) < 5 && float.Parse(rating) > 0)
+            {
+                ratingColor = "red";
+            }
+            else
+            {
+                ratingColor = "black";
+            }
+
+            <div class="card">
+                    <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                        @if (movie.PosterPath != null)
+                        {
+                        <img src="@(movie.TmdbId != null ? posterPathCard + movie.PosterPath : movie.PosterPath)" class="card-img-top" alt="@movie.Title poster">
+                        }
+                        else
+                        {
+                            <img src="~/images/default-poster1.png" />
+                        }
+                    </a>
+                <div class="card-body">
+                    <div class="rating @ratingColor">
+                        <p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
+                    </div>
+                    <h5 class="card-title">
+                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">@movie.Title</a>
+                    </h5>
+                </div>
+            </div>
+        }
+    </div>
 </div>
 <div class="tab-sections">
     <div class="tab">
-        <p>Explore from more than @(((int)Math.Round(Model.TotalMovies / 10.0)) * 10)+ movies</p>
+        <p>Find your next movie from a selection of over @(((int)Math.Round(Model.TotalMovies / 10.0)) * 10)+</p>
         <img src="~/images/home/moive.png"/>
     </div>
     <div class="tab">
         <img src="~/images/home/reviews.png" />
         <div class="tab-controls">
-            <p>View and write reviews</p>
+            <p>Share your thoughts and read others' reviews</p>
             <a asp-controller="Review" asp-action="AllUserReview">Your reviews</a>
         </div>
     </div>
@@ -47,64 +102,269 @@
         </div>
     }
 </div>
-
-<div class="carousel-section">
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-        </div>
-        <div class="carousel-inner">
-            @foreach (var movie in Model.TopActionMovies)
-            {
-                if (firstSlide == true)
+<div class="featured-section-carousel">
+    <h2>Highly Rated Action Movies</h2>
+    <div class="carousel-section">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            </div>
+            <div class="carousel-inner">
+                @foreach (var movie in Model.TopActionMovies)
                 {
-                    firstSlide = false;
-                    <div class="carousel-item active">
-                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                            <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
-                        </a>
-                        <div class="carousel-caption d-none d-md-block">
+                    if (firstSlide == true)
+                    {
+                        firstSlide = false;
+                        <div class="carousel-item active">
                             <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                                <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                                <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
                             </a>
-                            <p>@movie.Description.Substring(0, 200)...</p>
+                            <div class="carousel-caption d-none d-md-block">
+                                <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                                    <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                                </a>
+                                <p>@movie.Description.Substring(0, 200)...</p>
+                            </div>
                         </div>
+                    }
+                    else
+                    {
+                        <div class="carousel-item">
+                            <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                                <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
+                            </a>
+                            <div class="carousel-caption d-none d-md-block">
+                                <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                                    <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
+                                </a>
+                                <p>@movie.Description.Substring(0, 200)...</p>
+                            </div>
+                        </div>
+                    }
+                }
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+</div>
+<div class="featured-section">
+    <h2>Most Popular Films Of The Week</h2>
+    <div class="featured-cards">
+        @foreach (var movie in Model.TrendingMovies)
+        {
+            string rating = "0.0";
+            if (movie.Rating != null)
+            {
+                rating = movie.Rating;
+            }
+
+            if (float.Parse(rating) >= 8)
+            {
+                ratingColor = "green";
+            }
+            else if (float.Parse(rating) >= 5)
+            {
+                ratingColor = "orange";
+            }
+            else if (float.Parse(rating) < 5 && float.Parse(rating) > 0)
+            {
+                ratingColor = "red";
+            }
+            else
+            {
+                ratingColor = "black";
+            }
+
+            <div class="card">
+                    <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                        @if (movie.PosterPath != null)
+                        {
+                            <img src="@(movie.TmdbId != null ? posterPathCard + movie.PosterPath : movie.PosterPath)" class="card-img-top" alt="@movie.Title poster">
+                        }
+                        else
+                        {
+                            <img src="~/images/default-poster1.png" />
+                        }
+                    </a>
+                <div class="card-body">
+                    <div class="rating @ratingColor">
+                        <p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
                     </div>
+                    <h5 class="card-title">
+                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">@movie.Title</a>
+                    </h5>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+<div class="featured-section">
+    <h2>Recent Additions</h2>
+    <div class="featured-cards">
+        @foreach (var movie in Model.LatestMovies)
+        {
+            string rating = "0.0";
+            if (movie.Rating != null)
+            {
+                rating = movie.Rating;
+            }
+
+            if (float.Parse(rating) >= 8)
+            {
+                ratingColor = "green";
+            }
+            else if (float.Parse(rating) >= 5)
+            {
+                ratingColor = "orange";
+            }
+            else if (float.Parse(rating) < 5 && float.Parse(rating) > 0)
+            {
+                ratingColor = "red";
+            }
+            else
+            {
+                ratingColor = "black";
+            }
+
+            <div class="card">
+                @if (movie.TmdbId != null)
+                {
+                    <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                        @if (movie.Poster != null)
+                        {
+                            <img src="@(movie.TmdbId != null ? posterPathCard + movie.Poster : movie.Poster)" class="card-img-top" alt="@movie.Title poster">
+                        }
+                        else
+                        {
+                            <img src="~/images/default-poster1.png" />
+                        }
+                    </a>
                 }
                 else
                 {
-                    <div class="carousel-item">
-                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                            <div class="carouselImg" style="background-image: url(@(posterPath + movie.PosterPath));"></div>
-                        </a>
-                        <div class="carousel-caption d-none d-md-block">
-                            <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-                                <h5>@movie.Title (@movie.ReleaseDate.ToString("yyy"))</h5>
-                            </a>
-                            <p>@movie.Description.Substring(0, 200)...</p>
-                        </div>
-                    </div>
+                    <a asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">
+                        @if (movie.Poster != null)
+                        {
+                            <img src="@(movie.TmdbId != null ? posterPathCard + movie.Poster : movie.Poster)" class="card-img-top" alt="@movie.Title poster">
+                        }
+                        else
+                        {
+                            <img src="~/images/default-poster1.png" />
+                        }
+                    </a>
                 }
-            }
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+                <div class="card-body">
+                    <div class="rating @ratingColor">
+                        <p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
+                    </div>
+                    <h5 class="card-title">
+                        @if (movie.TmdbId != null)
+                        {
+                            <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">@movie.Title</a>
+                        }
+                        else
+                        {
+                            <a asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">@movie.Title</a>
+                        }
+                    </h5>
+                </div>
+            </div>
+        }
     </div>
 </div>
+@if (SignInManager.IsSignedIn(User) && Model.WatchlistMovies.Count() >= 5)
+{
+    <div class="featured-section">
+        <h2>From Your Watchlist</h2>
+        <div class="featured-cards">
+            @foreach (var movie in Model.WatchlistMovies)
+            {
+                string rating = "0.0";
+                if (movie.Rating != null)
+                {
+                    rating = movie.Rating;
+                }
+
+                if (float.Parse(rating) >= 8)
+                {
+                    ratingColor = "green";
+                }
+                else if (float.Parse(rating) >= 5)
+                {
+                    ratingColor = "orange";
+                }
+                else if (float.Parse(rating) < 5 && float.Parse(rating) > 0)
+                {
+                    ratingColor = "red";
+                }
+                else
+                {
+                    ratingColor = "black";
+                }
+
+                <div class="card">
+                    @if (movie.TmdbId != null)
+                    {
+                        <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+                            @if (movie.Poster != null)
+                            {
+                                <img src="@(movie.TmdbId != null ? posterPathCard + movie.Poster : movie.Poster)" class="card-img-top" alt="@movie.Title poster">
+                            }
+                            else
+                            {
+                                <img src="~/images/default-poster1.png" />
+                            }
+                        </a>
+                    }
+                    else
+                    {
+                        <a asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">
+                            @if (movie.Poster != null)
+                            {
+                                <img src="@(movie.TmdbId != null ? posterPathCard + movie.Poster : movie.Poster)" class="card-img-top" alt="@movie.Title poster">
+                            }
+                            else
+                            {
+                                <img src="~/images/default-poster1.png" />
+                            }
+                        </a>
+                    }
+                    <div class="card-body">
+                        <div class="rating @ratingColor">
+                            <p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
+                        </div>
+                        <h5 class="card-title">
+                            @if (movie.TmdbId != null)
+                            {
+                                <a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">@movie.Title</a>
+                            }
+                            else
+                            {
+                                <a asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">@movie.Title</a>
+                            }
+                        </h5>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+}
 
 @section Styles {
     <link rel="stylesheet" href="~/css/home.css" />
     <link rel="stylesheet" href="~/css/alert/alert.css" />
+    <link rel="stylesheet" href="~/css/movies.css" />
 }
 @section Scripts {
     <script src="~/js/alert/alert.js"></script>
