Minor styling changes

--- a/RentAMovie/Views/Movie/Create.cshtml
+++ b/RentAMovie/Views/Movie/Create.cshtml
@@ -1,9 +1,9 @@
 ﻿@model FormMovieModule
 @{
-    ViewData["Title"] = "Create Movie";
+    ViewData["Title"] = "Submit Movie";
 }
 
-<h2>Create movie</h2>
+<h2>Enter information about the film</h2>
 <partial name="~/Views/Shared/Movie/_MovieForm.cshtml" />
 
 @section Scripts {
