--- a/RentAMovie/Views/Movie/Edit.cshtml
+++ b/RentAMovie/Views/Movie/Edit.cshtml
@@ -1,9 +1,9 @@
 ﻿@model FormMovieModule
 @{
-    ViewData["Title"] = "Edit Movie";
+    ViewData["Title"] = "Change Details Movie";
 }
 
-<h2>Edit movie</h2>
+<h2>Change the movie details</h2>
 <partial name="~/Views/Shared/Movie/_MovieForm.cshtml" />
 
 @section Scripts {
