--- a/RentAMovie/Views/Shared/_LoginPartial.cshtml
+++ b/RentAMovie/Views/Shared/_LoginPartial.cshtml
@@ -16,10 +16,10 @@
                 <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Create">Add movie</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="UserWatchlist">Watchlist</a>
             </li>
             <li class="nav-item">
-                <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="UserWatchlist">Watchlist</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Movie" asp-action="Create">Submit a movie</a>
             </li>
             @if (User.IsAdmin())
             {
