--- a/RentAMovie/wwwroot/css/userMovies.css
+++ b/RentAMovie/wwwroot/css/userMovies.css
@@ -1,22 +1,29 @@
-﻿.user-controls a {
-    width: 100%;
-    background-color: #0D4C92;
-    border: none;
-    transition: 100ms;
+﻿.user-controls {
+    padding: 0 5px 5px 5px;
 }
 
-.user-controls a:hover {
-    background-color: #0079FF;
-}
-
+.user-controls a,
 .user-controls input {
-    background-color: #d52522;
+    width: 100%;
+    background-color: inherit;
+    color: #0D4C92;
+    font-weight: 500;
+    text-align: left;
+    padding: 0;
+    margin: 0 !important;
     border: none;
+    outline: none;
     transition: 100ms;
 }
 
+.user-controls a:hover,
 .user-controls input:hover {
-    background-color: #ff2824;
+    color: #0079FF;
+    background-color: inherit;
+}
+
+.mt-2 {
+    margin-top: 5px !important;
 }
 
 .not-available-container {
