--- a/RentAMovie/Areas/Admin/Views/Movie/Index.cshtml
+++ b/RentAMovie/Areas/Admin/Views/Movie/Index.cshtml
@@ -26,6 +26,16 @@
 	{
 		@foreach (var movie in Model.UsersMovies)
 		{
+			int? publishYear;
+			if (movie?.DatePublished != null)
+			{
+			    publishYear = movie.DatePublished.Value.Year;
+			}
+			else
+			{
+			    publishYear = null;
+			}
+
 			<div class="moive">
 				@if (movie.Poster != null)
 				{
@@ -39,7 +49,12 @@
 					<h4>@movie.Title</h4>
 					<p>@(movie.DatePublished != null ? movie.DatePublished.Value.ToString("MMM dd, yyyy") : "-")</p>
 					<div class="movie-controls">
-						<a asp-area="" asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">
+						<a 
+						asp-area="" 
+						asp-controller="Movie" 
+						asp-action="MovieUser" 
+						asp-route-movieId="@movie.Id"
+						asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(movie.Title, publishYear)">
 							<p>View</p>
 						</a>
 						<a asp-area="" asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">
@@ -69,6 +84,16 @@
 	{
 		@foreach (var movie in Model.TmdbMovies)
 		{
+			int? publishYear;
+			if (movie?.DatePublished != null)
+			{
+				publishYear = movie.DatePublished.Value.Year;
+			}
+			else
+			{
+				publishYear = null;
+			}
+
 			<div class="moive">
 				@if (movie.Poster != null)
 				{
@@ -82,7 +107,12 @@
 					<h4>@movie.Title</h4>
 					<p>@(movie.DatePublished != null ? movie.DatePublished.Value.ToString("MMM dd, yyyy") : "-")</p>
 					<div class="movie-controls">
-						<a asp-area="" asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+						<a 
+						asp-area="" 
+						asp-controller="Movie"
+						asp-action="MovieTmdb"
+						asp-route-id="@movie.TmdbId"
+						asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(movie.Title, publishYear)">
 							<p>View</p>
 						</a>
 						<a class="d-none">
