--- a/RentAMovie/Views/Movie/UserWatchlist.cshtml
+++ b/RentAMovie/Views/Movie/UserWatchlist.cshtml
@@ -2,85 +2,15 @@
 @model List<SearchMovieModel>
 @{
 	ViewData["Title"] = "Watchlist";
-	string posterPath = "https://image.tmdb.org/t/p/w500";
-	string ratingColor;
 }
 
 <h1>My watchlist</h1>
-
 <div class="row"> 
 	@if (Model != null && Model.Count > 0)
 	{
 		@foreach (var movie in Model)
 		{
-			string rating = "0";
-
-			if (movie.Rating != null)
-			{
-				rating = movie.Rating;
-			}
-
-			if (float.Parse(rating) >= 8)
-			{
-				ratingColor = "green";
-			}
-			else if (float.Parse(rating) >= 5)
-			{
-				ratingColor = "orange";
-			}
-			else if (float.Parse(rating) < 5 && float.Parse(rating) > 0)
-			{
-				ratingColor = "red";
-			}
-			else
-			{
-				ratingColor = "black";
-			}
-
-			<div class="card">
-				@if (movie.TmdbId != null)
-				{
-					<a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
-						@if (movie.PosterPath != null)
-						{
-							<img src="@(movie.TmdbId != null ? posterPath + movie.PosterPath : movie.PosterPath)" class="card-img-top" alt="@movie.Title poster">
-						}
-						else
-						{
-							<img src="~/images/default-poster1.png" />
-						}
-					</a>
-				}
-				else
-				{
-					<a asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">
-						@if (movie.PosterPath != null)
-						{
-							<img src="@(movie.TmdbId != null ? posterPath + movie.PosterPath : movie.PosterPath)" class="card-img-top" alt="@movie.Title poster">
-						}
-						else
-						{
-							<img src="~/images/default-poster1.png" />
-						}
-					</a>
-				}
-				<div class="card-body">
-					<div class="rating @ratingColor">
-						<p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
-					</div>
-					<h5 class="card-title">
-						@if (movie.TmdbId != null)
-						{
-							<a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">@movie.Title</a>
-						}
-						else
-						{
-							<a asp-controller="Movie" asp-action="MovieUser" asp-route-movieId="@movie.Id">@movie.Title</a>
-						}
-					</h5>
-					<h6>@(movie.ReleaseDate != null ? movie.ReleaseDate.Value.ToString("MMM dd, yyyy") : "-")</h6>
-				</div>
-			</div>
+			<partial name="~/Views/Shared/Movie/_MovieSingleCardMixedFull.cshtml" model="movie" />
 		}
 	}
 	else
