--- a/RentAMovie/Views/Shared/Movie/_MovieList.cshtml
+++ b/RentAMovie/Views/Shared/Movie/_MovieList.cshtml
@@ -31,7 +31,11 @@
 			}
 
 			<div class="card">
-				<a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">
+				<a 
+				asp-controller="Movie"
+				asp-action="MovieTmdb"
+				asp-route-id="@movie.TmdbId"
+				asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(movie.Title, movie.ReleaseDate.Year)">
 					@if (movie.PosterPath != null)
 					{
 						<img src="@(posterPath + movie.PosterPath)" class="card-img-top" alt="@movie.Title poster">
@@ -46,7 +50,12 @@
 						<p>@(movie.Rating != null && float.Parse(movie.Rating) != 0 ? float.Parse(movie.Rating).ToString("0.0") : "NR")</p>
 					</div>
 					<h5 class="card-title">
-						<a asp-controller="Movie" asp-action="MovieTmdb" asp-route-id="@movie.TmdbId">@movie.Title</a>
+						<a asp-controller="Movie" 
+						asp-action="MovieTmdb" 
+						asp-route-id="@movie.TmdbId"
+						asp-route-movieInfo="@WebUtilities.SimplifyMovieUrlInformation(movie.Title, movie.ReleaseDate.Year)">
+							@movie.Title
+						</a>
 					</h5>
 					<h6>@movie.ReleaseDate.ToString("MMM dd, yyyy")</h6>
 				</div>
@@ -54,8 +63,3 @@
 		}
 	</div>
 </div>
-
-@*@section MovieInfoSection {
-	<div id="dark"></div>
-	<div class="info-tab"></div>
-}*@
